Fixed weird height changes and top paddings when being changing from collapsed to expanded

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -166,10 +166,8 @@
     #navigator-toolbox[zen-user-hover='true']:has(*[open='true']:not(tab):not(#zen-sidepanel-button)),
     #navigator-toolbox[zen-expanded='true']:not([zen-user-hover='true'])) {
     --zen-toolbox-min-width: fit-content;
-
-    & {
-      padding: var(--zen-toolbox-padding);
-    }
+    padding: var(--zen-toolbox-padding);
+    padding-top: 0;
 
     & #titlebar {
       min-width: 150px;
